<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/text_view_PatientRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/strPatientRoom"></TextView>

        <TextView
            android:id="@+id/text_view_PatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strPatientName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="1"
            android:layout_toStartOf="@id/text_view_PatientRoom"
            android:layout_alignParentStart="true"
            android:ellipsize="end"></TextView>

        <TextView
            android:id="@+id/text_view_PatientDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_PatientName"
            android:text="@string/PatientDept">
        </TextView>

        <TextView
            android:id="@+id/text_view_PatientNurseid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/strPatientNurse"
            android:layout_below="@id/text_view_PatientRoom"></TextView>
    </RelativeLayout>
</androidx.cardview.widget.CardView>